# raycastingJW

./: CMakeLists.txt  raycaster.code-workspace
src/: main.c  map.c  raycaster.c
src/include/: map.h  raycaster.h
